Prepare mbed-client for non-IP stack
* Added Tridonic network stack
* Removed mbedtls dependency
* Disable test which require mbedtls

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -25,8 +25,8 @@ add_dependencies(all_tests mbed-client-test-helloworld-mbedclient)
 
 endif()
 
-if(TARGET_LIKE_MBED)
-
+if(0)
+#if(TARGET_LIKE_MBED)
 add_executable(mbed-client-test-mbedclient-smokeTest 
         "mbedclient-smokeTest/main.cpp"
         "mbedclient-smokeTest/testconfig.cpp"
